<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalc</string>
    <string name="action_settings">Settings</string>

	<string name="bill_tv">Bill</string>
	<string name="bill_et">0.0</string>
	
	<string name="tip_tv">Tip</string>
	<string name="tip_et">0.15</string>
	
	<string name="final_bill_tv">Final Bill</string>
	<string name="final_bill_et">0.0</string>
	
	<string name="change_tip_tv">Change Tip</string>
	
	<string name="intro_tv">Introduction</string>
	<string name="intro_friendly_tv">Friendly</string>
	<string name="intro_special_tv">Specials</string>
	<string name="intro_opinion_tv">Opinion</string>
	
	<string name="available_tv">Availability</string>
	<string name="available_bad_rb">Bad</string>
	<string name="available_ok_rb">OK</string>
	<string name="available_good_rb">Good</string>
	
	<string name="time_waiting_tv">Time Waiting for Service</string>
	<string name="start_chronometer_button">Start</string>
	<string name="pause_chronometer_button">Pause</string>
	<string name="reset_chronometer_button">Reset</string>
	
	<string-array name="problem_solving">
	    <item>Problem Solving</item>
	    <item>Bad</item>
	    <item>OK</item>
	    <item>Good</item>
	</string-array>
	
</resources>
