<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ajaybhatia.tipcalc.MainActivity" >

    <TextView
        android:id="@+id/billTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="14dp"
        android:gravity="left"
        android:text="@string/bill_tv" />

    <EditText
        android:id="@+id/billEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/billTextView"
        android:layout_alignBottom="@+id/billTextView"
        android:layout_toRightOf="@+id/billTextView"
        android:ems="5"
        android:inputType="numberDecimal"
        android:text="@string/bill_et" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/finalBillTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tipTextView"
        android:layout_below="@+id/tipEditText"
        android:layout_marginTop="14dp"
        android:text="@string/final_bill_tv" />

    <TextView
        android:id="@+id/changeTipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/finalBillTextView"
        android:layout_alignBottom="@+id/finalBillTextView"
        android:layout_alignLeft="@+id/billTextView"
        android:text="@string/change_tip_tv" />

    <SeekBar
        android:id="@+id/changeTipSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/finalBillEditText"
        android:layout_alignLeft="@+id/changeTipTextView"
        android:layout_alignRight="@+id/billEditText"
        android:progress="15" />

    <EditText
        android:id="@+id/tipEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tipTextView"
        android:layout_alignBottom="@+id/tipTextView"
        android:layout_alignParentRight="true"
        android:layout_marginRight="14dp"
        android:ems="4"
        android:inputType="numberDecimal"
        android:text="@string/tip_et" />

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/billEditText"
        android:layout_alignBottom="@+id/billEditText"
        android:layout_toLeftOf="@+id/tipEditText"
        android:gravity="right"
        android:text="@string/tip_tv" />

    <EditText
        android:id="@+id/finalBillEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/finalBillTextView"
        android:layout_below="@+id/finalBillTextView"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/final_bill_et" />

    <TextView
        android:id="@+id/introTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/changeTipSeekBar"
        android:layout_below="@+id/changeTipSeekBar"
        android:layout_marginTop="30dp"
        android:text="@string/intro_tv" />

    <CheckBox
        android:id="@+id/friendlyCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/introTextView"
        android:layout_below="@+id/introTextView"
        android:layout_marginTop="15dp"
        android:text="@string/intro_friendly_tv" />

    <CheckBox
        android:id="@+id/specialsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/friendlyCheckBox"
        android:layout_alignBottom="@+id/friendlyCheckBox"
        android:layout_toLeftOf="@+id/tipEditText"
        android:text="@string/intro_special_tv" />

    <CheckBox
        android:id="@+id/opinionCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/specialsCheckBox"
        android:layout_alignParentRight="true"
        android:text="@string/intro_opinion_tv" />

    <TextView
        android:id="@+id/availabileTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/friendlyCheckBox"
        android:layout_centerVertical="true"
        android:text="@string/available_tv" />

    <RadioGroup
        android:id="@+id/availableRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/availabileTextView"
        android:layout_below="@+id/availabileTextView"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/availableBadRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/available_bad_rb" />

        <RadioButton
            android:id="@+id/availableOKRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_ok_rb" />

        <RadioButton
            android:id="@+id/availableGoodRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_good_rb" />
    </RadioGroup>

    <Spinner
        android:id="@+id/problemsSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/availableRadioGroup"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/availableRadioGroup"
        android:layout_marginTop="16dp"
        android:entries="@array/problem_solving" />

    <Chronometer
        android:id="@+id/timeWaitingChronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/availableRadioGroup"
        android:layout_alignTop="@+id/timeWaitingTextView"
        android:text="Chronometer" />

    <Button
        android:id="@+id/pauseChronometerButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/startChronometerButton"
        android:layout_toRightOf="@+id/friendlyCheckBox"
        android:text="@string/pause_chronometer_button" />

    <Button
        android:id="@+id/resetChronometerButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/pauseChronometerButton"
        android:layout_toRightOf="@+id/timeWaitingChronometer"
        android:text="@string/reset_chronometer_button" />

    <TextView
        android:id="@+id/timeWaitingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/pauseChronometerButton"
        android:layout_below="@+id/problemsSpinner"
        android:layout_marginTop="20dp"
        android:text="@string/time_waiting_tv" />

    <Button
        android:id="@+id/startChronometerButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/timeWaitingTextView"
        android:layout_below="@+id/timeWaitingChronometer"
        android:text="@string/start_chronometer_button" />

</RelativeLayout>